--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./CSS/contactStyle.css">
     <link rel="stylesheet" href="./CSS/headStyle.css">
     <link rel="stylesheet" href="./CSS/footStyle.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -71,23 +72,23 @@
         </div>
     </div> -->
     <div class="topContainer">
-        <div class="leftContainer">
+        <div class="leftContainer" data-aos="slide-right">
             <h3>Contact Information</h3>
-            <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="Contact Image">
+            <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="Contact Image" data-aos="zoom-in">
             <div class="content">
                 <p>Contact: 123-456-7890</p>
                 <p>Email: example@email.com</p>
                 <p>Address: 123 Main Street, City, Country</p>
             </div>
         </div>
-        <div class="contactForm">
+        <div class="contactForm" data-aos="zoom-in">
             <h3>Contact Us</h3>
-            <form action="#" method="post">
+            <form onsubmit="sendMail(); reset(); return false" data-aos="slide-left">
                 <input type="text" id="studentname" name="studentname" placeholder="Student Name" required>
-                <input type="email" id="parentemail" name="parentemail" placeholder="Parent Email Id" required>
+                <input type="text" id="parentemail" name="parentemail" placeholder="Parent Email Id" required>
                 <input type="number" id="phone" name="phone" placeholder="Mobile Number" required>
                 <textarea id="message" name="message" rows="4" placeholder="Message" required></textarea>
-                <button class="submit">Contact Now</button>
+                <button type="submit" class="submit">Contact Now</button>
             </form>
         </div>
     </div>
@@ -115,6 +116,17 @@
     </footer>
     <!-- Footer ends -->
     <script src="./js/responsive.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    <script src="./js/contact.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init({
+      offset: 300,
+      duration: 800,
+    });
+  </script>
 </body>
 
 </html>
