--- a/admissions.html
+++ b/admissions.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Link to your CSS file for styling -->
 </head>
 
@@ -45,7 +46,7 @@
 
     <main>
         <div class="topContainer">
-            <div class="leftContainer">
+            <div class="leftContainer" data-aos="slide-right">
                 <h2>Admission</h2>
                 <div class="content">
                     <p>ABC has always been ‘learner centric’ and open to change, this has been reflected in our approach
@@ -57,9 +58,9 @@
                     </p>
                 </div>
             </div>
-            <div class="admForm">
+            <div class="admForm" data-aos="slide-left">
                 <h3>Preschool Admission Enquiry Form <br>2023-24</h3>
-                <form action="#" method="post">
+                <form onsubmit="sendMail(); reset(); return false" data-aos="slide-left">
                     <input type="text" id="studentname" name="studentname" placeholder="Student Name" required>
                     <input type="text" id="parentname" name="parentname" placeholder="Parent Name" required>
                     <input type="email" id="parentemail" name="parentemail" placeholder="Parent Email Id" required>
@@ -72,7 +73,7 @@
                         <option value="lkg">L.K.G</option>
                         <option value="ukg">U.K.G</option>
                     </select>
-                    <button class="submit">Enquire Now</button>
+                    <button type="submit" class="submit">Enquire Now</button>
                 </form>
             </div>
         </div>
@@ -80,7 +81,7 @@
         <div class="program">
             <h3>Our Programs</h3>
             <div class="container">
-                 <div class="card active" id="card1">
+                <div class="card active" id="card1" data-aos="zoom-in">
                     <!--<div class="photo">
                         <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="">
                     </div>
@@ -95,7 +96,7 @@
                         <p class="new"><i class="fa-solid fa-clock"></i>5-6 hours <br><span>per day</span></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-out">
                     <!-- <div class="photo">
                         <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="">
                     </div>
@@ -110,7 +111,7 @@
                         <p class="new"><i class="fa-solid fa-clock"></i>5-6 hours <br><span>per day</span></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <!-- <div class="photo">
                         <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="">
                     </div>
@@ -125,7 +126,7 @@
                         <p class="new"><i class="fa-solid fa-clock"></i>5-6 hours <br><span>per day</span></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-out">
                     <!-- <div class="photo">
                         <img src="./Resources/Contact/WhatsApp Image 2023-09-08 at 9.04.05 PM (1).jpeg" alt="">
                     </div>
@@ -144,7 +145,7 @@
         </div>
 
         <div class="join">
-            <div class="left">
+            <div class="left" data-aos="slide-down">
                 <h3>Why ABC School?</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis odit laborum velit excepturi
                     fugiat illum neque beatae! Expedita, ducimus error!
@@ -156,15 +157,15 @@
             </div>
             <div class="right">
                 <div class="joinContainer">
-                    <div class="card">
+                    <div class="card" data-aos="slide-left">
                         <i class="fa-solid fa-user-graduate"></i>
                         <p>Providing Quality education.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="slide-left">
                         <i class="fa-solid fa-school"></i>
                         <p>Great Environment for learning.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="slide-left">
                         <i class="fa-solid fa-lightbulb"></i>
                         <p>Innovation and smart curriculum</p>
                     </div>
@@ -197,8 +198,18 @@
     </footer>
     <!-- Footer ends -->
 
-    <script src="./js/admission.js"></script>
+    
     <script src="./js/responsive.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="./js/admission.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 300,
+            duration: 800,
+        });
+    </script>
 </body>
 
 </html>
